# vedarogue

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVPLAN.md  DEVPLAN_nextstep.md  Makefile  README.deployments.md  README.implementations.rust.md  README.md  UNRELEVANT_NON_EXECUTED_AGENTS_PROMPTS.md  _secrets.registered-hosts.md  _secrets.tui-profiles.env  agents.md  requirements.txt
AGENTS.d/: _secrets.tui-profiles.env.md  changelog.md  lfs.md
crates/gh-local-runner/: Cargo.toml
crates/gh-local-runner/src/: main.rs
crates/impl-stubs/: Cargo.toml
crates/impl-stubs/src/: ci_deployments.rs  docker_tui.rs  env_sync.rs  lib.rs  test_logs.rs  tui_install.rs  win_container.rs  wsl.rs
crates/impl-stubs/tests/: stubs_ok.rs
docker/: .dockerignore
docs/: roguelike_data_mapping.md  session_tui_list.txt
features/: 10_release.feature  1_tui_installers.feature  2_env_sync.feature  3_dockerized_tuis.feature  4_wsl.feature  5_windows_container.feature  6_ci_publish.feature  7_docker_test_logs.feature  8_make_runner.feature  9_autocommit_changelog.feature
fixtures/: README.md
install_tui/: LIST_OF_ENV_VARIABLES_TO_IMPORT  README.md  diskonaut.sh  distrobox-tui.sh  env_sync.sh  gdu.sh  gif-for-cli.sh  install_win.ps1  iterm2.sh  kitty.sh  lib.sh  ncdu.sh  nemu.sh  tlock.sh  tray-tui.sh  ttyper.sh  wego.sh  xplr.sh
notebooks/: roguelike_self_improve.ipynb
rl_dspy/: roguelike_generator.py
scripts/: auto_commit.sh  build_blueprint.py  check_lfs_budget.sh  checksum.sh  common.sh  csv_to_yaml.py  download.sh  dspy_generate_yaml.py  extract.sh  (+11 more)
(+12 files in other folders)
