[package]
name = "make-runner"
version = "0.1.0"
edition = "2021"
description = "Run Makefile targets with full stdio passthrough"
license = "MIT"
repository = "https://github.com/example/vedarogue"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["make", "runner", "cli"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
which = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
