[package]
name = "impl-stubs"
version = "0.1.0"
edition = "2021"
description = "Stub implementations for testable features (scaffold only)"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
